<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello Android !</string>
    <string name="hello_world">Hello Android !</string>
    <string name="menu_op1">Preferencias</string>
    <string name="menu_op2">Utiles</string>
    <string name="menu_op3">Agenda</string>
    <string name="menu_op3_1">SubItem 1 Agenda</string>
    <string name="menu_op3_2">SubItem 2 Agenda</string>
    <string name="menu_cont_op1">Item Contextual 1</string>
    <string name="menu_cont_op2">Item Contextual 2</string>
    <string name="menu_actionM_op1">Capitalizar</string>
    <string name="menu_actionM_op2">Duplicar</string>


    menu_actionM_op2

</resources>